--- a/ZumoController.WinForms/ZumoController.WinForms.csproj
+++ b/ZumoController.WinForms/ZumoController.WinForms.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="MetroModernUI" Version="1.4.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+    <PackageReference Include="SharpDX.XInput" Version="4.2.0" />
     <PackageReference Include="System.IO.Ports" Version="7.0.0" />
   </ItemGroup>
 
